Update error codes in README
